# m5-software

./: build-log.txt  build_log.txt  build_log_utf8.txt  build_output.txt  check_db.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  version.json
.github/workflows/: bump-version.yml
app/: App.js  error.js  global-error.js  globals.css  layout.js  not-found.js  page.js
app/Context/: AuthContext.js  BranchContext.js  EntityContext.js
app/components/: AddUpdateDeleteButton.js  AlertModal.js  AutoCalcModal.js  BgBlack.js  BranchHub.js  BranchManifest.js  BulkUploadModal.js  Buttons.js  ChatSlider.js  Checkbox.js  ClientManifest.js  CloseButton.js  CodeList.js  ConfirmModal.js  DataLockModal.js  DownloadCsvExcel.js  DownloadDropdown.js  Dropdown.js  DummyInputBox.js  Heading.js  HubAirport.js  HubHub.js  InputBox.js  Loader.js  ManifestO.js  ManifestR.js  ManifestReport.js  Modal.js  MonthInput.js  Notificationflag.js  OrgShipper.js  PasswordModal.js  Permissions.js  PrintReport.js  RadioButton.js  RedCheckBox.js  RefShipper.js  SaleDetails.js  SearchAndReplace.js  Sidebar.js  (+6 more)
app/hooks/: useAlertCheck.js
app/lib/: GlobalContext.js  eventCodes.js  exportData.js  formatDate.js  (+4 more)
public/: Assign-customer-target-bulk.xlsx  NORTH MONITORING COMPARISON REPORT SECTOR WISE ( 01-21 MARCH&APR).xlsx  Sample-Data.xlsx  assign-sector-bulkUpload-sample.xlsx  auto-awb-bulkUpload.xlsx  employee-sample.xlsx  hold report to make.xlsx  shipment_full_sample.xlsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+286 files in other folders)
